@@ -1,3 +1,7 @@
+2001-06-17  Per Bothner  <per@bothner.com>
+
+	* ReaderParens.java (readList):  Fix handling of bad syntax.
+
 2001-06-05  Per Bothner  <per@bothner.com>
 
 	* ReaderParens.java (readList):  After seeing '.' that starts a token,
